--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -4,10 +4,36 @@
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
         >
-    <TextView
-            android:layout_width="fill_parent"
+    <LinearLayout android:id="@+id/stuff"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content">
+        <Button android:id="@+id/recordbutton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Start recording"/>
+        <Button android:id="@+id/playbutton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Start playing"/>
+    </LinearLayout>
+    <LinearLayout android:id="@+id/recordingoptions"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Hello World, bitch!"
+            android:visibility="gone">
+        <Button android:id="@+id/addbookmark"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Add bookmark"/>
+        <Button android:id="@+id/renameaudio"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Rename audio"/>
+    </LinearLayout>
+    <ListView android:id="@+id/addedbookmarklist"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:visibility="gone"
             />
+
 </LinearLayout>
 
