lists bookmarks now

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -34,6 +34,10 @@
               android:layout_height="wrap_content"
               android:visibility="gone"
             />
-
+    <ListView android:id="@+id/playbookmarklist"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:visibility="gone"
+            />
 </LinearLayout>
 
